# Closet_Canvas

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.circleci/: config.yml  example.txt
apps/web/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/api/: capture.ts  recommendations.ts  user.ts
apps/web/src/components/: LandingHero.tsx  ProcessingScreen.tsx  RecommendationsPage.tsx  SessionClipsBoard.tsx  SessionWorkspace.tsx  StatusIndicator.tsx  UserLogin.tsx  (+1 more)
data/catalog/: garments.json
docs/catalog/: catalog_example_use.py  catalog_model.md
docs/report/: final.aux  final.bbl  final.blg  final.fdb_latexmk  final.fls  final.out  final.tex  final.toc  references.bib
services/capture/: Dockerfile  config.py  main.py  pyproject.toml
services/capture/api/: routes.py  status_routes.py
services/capture/application/: complete_multipart_upload.py  create_multipart_upload.py  create_session.py  dto.py  interfaces.py  login_user.py  notify_ingest.py  request_session_clip_upload.py  save_user_measurements.py  session_clip_uploaded.py  user_interfaces.py
services/capture/domain/: ingest_notification.py  session.py  upload.py  user.py
services/capture/infrastructure/: db.py  events.py  ids.py  ingest_notifications.py  minio_uploads.py  postgres_ingest_notifications.py  sessions.py  users.py
services/capture/tests/: test_request_session_clip_upload.py
services/ingest/: Dockerfile.cpu  Dockerfile.gpu  config.py  download_models.py  entrypoint.sh  listener.py  pyproject.toml  run_gating_worker.py  run_worker.py  worker.py
services/ingest/application/: interfaces.py
services/ingest/application/use_cases/: __init__.py  gate_clip.py  process_clip.py  recommend.py
services/ingest/domain/: clip.py
services/ingest/infrastructure/: header_cache.py  queue.py  recommendation_service.py  remux.py  smpl_service.py  status_publisher.py  storage.py  video_gating_service.py
services/ingest/tests/: test_process_clip_use_case.py  test_remux_processor.py  test_video_gating.py  test_video_quality_metrics.py  test_worker.py
src/closet_canvas/body_capture/: segmentation.py
src/closet_canvas/catalog/: embeddings.py  segmentation.py
src/closet_canvas/recommendation/: catalog_recommender.py  pipeline.py  preference.py  recommender.py
src/closet_canvas/smpl_generator/: smpl.py
src/closet_canvas/video_quality/: metrics.py  video_gating.py
tests/catalog/: test_embeddings.py  test_segmentation.py
tests/recommendation/: __init__.py  test_catalog_recommender.py
(+6 files in other folders)
