
[project]
name = "ingest"
version = "0.1.0"
description = "Clip ingest worker"
requires-python = ">=3.11"
dependencies = [
    "redis==7.0.1",
    "rq==2.6.0",
    "boto3>=1.40.65",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
gating = [
    "closet-canvas[catalog]",
    "huggingface-hub>=0.36.0",
]
recommendation = [
    "closet-canvas[recommender]",
]
api = [
    "fastapi[standard]>=0.121.3",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["services.ingest*"]

[tool.uv.sources]
closet-canvas = { workspace = true }
